--- a/season/css/booking.css
+++ b/season/css/booking.css
@@ -2,19 +2,19 @@
   margin: auto;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 .booking_content{
-  grid-column: 1/3;
+  grid-column: 2/4;
 }
 
 .booking_sidebar {
-  position: fixed;
-  right: 0;
+  position: sticky;
+  top: 100px;
   width: 300px;
   height: 700px;
   background-color: aqua;
-  grid-column: 3/4;
+  grid-column: 4/5;
 }
 
 .booking_block {
@@ -27,6 +27,7 @@
 }
 
 .booking_table td {
+  min-width: 100px;
   padding: 20px;
 }
 
