--- a/season/css/booking.css
+++ b/season/css/booking.css
@@ -1,3 +1,51 @@
+a {
+  text-decoration: none;
+}
+img {
+  max-width: 100%;
+}
+.booking_top_img {
+  margin: 10px auto;
+  height: 500px;
+  max-width: 1920px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+.booking_top_img div {
+  position: relative;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  overflow: hidden;
+}
+
+.booking_top_img div:hover {
+  transform: scale(1.3);
+  transition-duration: 1s;
+}
+
+#bt_img1 {
+  grid-column: 1 / 3;
+	grid-row: 1 / 3;
+}
+#bt_img2 {
+  grid-column: 3 / 4;
+	grid-row: 1 / 2;
+}
+#bt_img3 {
+  grid-column: 4 / 5;
+	grid-row: 1 / 2;
+}
+#bt_img4 {
+  grid-column: 3 / 4;
+	grid-row: 2 / 3;
+}
+#bt_img5 {
+  grid-column: 4 / 5;
+	grid-row: 2 / 3;
+}
+
 .booking {
   margin: auto;
   width: 100%;
@@ -10,15 +58,16 @@
 
 .booking_sidebar {
   position: sticky;
+  border: 1px solid black;
   top: 100px;
   width: 300px;
   height: 700px;
-  background-color: aqua;
+  /* background-color: aqua; */
   grid-column: 4/5;
 }
 
 .booking_block {
-  margin: 20px 0;
+  margin: 20px;
 }
 
 .booking_table {
@@ -33,4 +82,66 @@
 
 .booking_table tr > :first-child {
   background-color: rgb(230, 230, 230);
+}
+
+.booking_sidebar_block {
+  width: 100%;
+  margin: 10px;
+}
+
+.d_f {
+  display: flex;
+}
+
+.booking_sidebar_long {
+  margin: 10px auto;
+  width: 18rem;
+  height: 1.8rem;
+  padding-left: 5px;
+  
+}
+
+.booking_sidebar_short {
+  
+  margin: 10px auto;
+  width: 9rem;
+  height: 1.8rem;
+  padding-left: 5px;
+
+}
+
+.a_btn {
+  display: flex;
+  width: 200px;
+  height: 35px;
+  border: 1px solid black;
+  margin: 5px auto;
+}
+
+#a_reservation {
+  color: white;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(127, 216, 182);
+}
+
+#a_favor {
+  color: white;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 82, 82);
+}
+
+#a_kakao {
+  color: rgb(51, 45, 9);
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 223, 44);
+}
+
+#b_s_date {
+  margin: 10px auto;
+  width: 18rem;
+  height: 1.8rem;
+  padding-left: 5px;
 }
