--- a/season/css/season.css
+++ b/season/css/season.css
@@ -43,6 +43,24 @@
   background-color: red;
 }
 
+#wrapper1 {
+  display: grid;
+  grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));  /* 화면을 꽉 채울만큼 칼럼 너비를 늘려서 표시 */
+  margin-bottom:20px;
+}
+
+#wrapper2 {
+  display: grid;
+  grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));  /* 화면을 꽉 채울만큼 칼럼 너비를 늘려서 표시 */
+  margin-bottom:20px;
+}
+
+#wrapper3 {
+  display: grid;
+  grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));  /* 화면을 꽉 채울만큼 칼럼 너비를 늘려서 표시 */
+  margin-bottom:20px;
+}
+
 .box1 {
   padding-right: 2%;
   padding-bottom: 8%;
@@ -50,7 +68,7 @@
 
 .box2 {
   padding-left: 2%;
-  padding-bottom: 10%;
+  padding-bottom: 5%;
 }
 
 .box3 {
@@ -93,58 +111,6 @@
 #img-left, #img-right {
   /* border-radius: 50%; */
 }
-
-.caption1 {
-  position: absolute;
-  top:200px;  /* 기준 위치보다 200px 아래로 */
-  width:300px;
-  height:200px;
-  padding-top:20px;
-  background:rgba(0,0,0,0.6);  /* 반투명한 검정 배경 */ 
-  opacity:0;  /* 화면에 보이지 않게 */ 
-  transition: all 0.6s ease-in-out;  /* 나타날 때 부드럽게 트랜지션 추가 */
-  z-index:10;  /* 다른 요소보다 위에 있도록 */ 
-}
-
-.caption1 li:hover .caption {
-  opacity: 1;  /* 설명글이 화면에 보이게 */ 
-  transform: translateY(-200px);  /* 설명글이 위로 200px 이동하게 */
-}
-
-.caption2 {
-  position: absolute;
-  top:200px;  /* 기준 위치보다 200px 아래로 */
-  width:300px;
-  height:200px;
-  padding-top:20px;
-  background:rgba(0,0,0,0.6);  /* 반투명한 검정 배경 */ 
-  opacity:0;  /* 화면에 보이지 않게 */ 
-  transition: all 0.6s ease-in-out;  /* 나타날 때 부드럽게 트랜지션 추가 */
-  z-index:10;  /* 다른 요소보다 위에 있도록 */ 
-}
-
-.caption2 li:hover .caption {
-  opacity: 1;  /* 설명글이 화면에 보이게 */ 
-  transform: translateY(-200px);  /* 설명글이 위로 200px 이동하게 */
-}
-
-.caption3 {
-  position: absolute;
-  top:200px;  /* 기준 위치보다 200px 아래로 */
-  width:300px;
-  height:200px;
-  padding-top:20px;
-  background:rgba(0,0,0,0.6);  /* 반투명한 검정 배경 */ 
-  opacity:0;  /* 화면에 보이지 않게 */ 
-  transition: all 0.6s ease-in-out;  /* 나타날 때 부드럽게 트랜지션 추가 */
-  z-index:10;  /* 다른 요소보다 위에 있도록 */ 
-}
-
-.caption3 li:hover .caption {
-  opacity: 1;  /* 설명글이 화면에 보이게 */ 
-  transform: translateY(-200px);  /* 설명글이 위로 200px 이동하게 */
-}
-
 
 .main-button {
   float: right;
