--- a/season/css/season.css
+++ b/season/css/season.css
@@ -98,6 +98,7 @@
   padding-bottom: 20px;
   padding-left: 10px;
   padding-right: 10px;
+  -webkit-mask-image: linear-gradient(to right, #000 0%, transparent 90%, transparent 100%);
 }
 
 /* 오른쪽 사진 배치 */
@@ -106,6 +107,7 @@
   padding-bottom: 20px;
   padding-left: 10px;
   padding-right: 10px;
+  -webkit-mask-image: linear-gradient(to left, #000 0%, transparent 90%, transparent 100%);
 }
 
 #img-left, #img-right {
