--- a/index.css
+++ b/index.css
@@ -1,38 +1,96 @@
 nav {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #32a1ce;
 }
 
-.header ol {
+.navbar ol {
   list-style-type: none;
 }
 
-.menu1 {
-  display: inline-block;
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
 }
-.menu2 {
+
+.logo {
   display: inline-block;
-  padding-left: 30%;
+  color: rgb(77, 125, 159);
 }
-.menu3 {
+
+.brandlogo {
+  display: inline-block;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: medium;
+}
+
+.search, .member {
   display: inline-block;
   padding-left: 30%;
 }
 
 .video {
+  display: block;
   width: 50rem;
   height: 20rem;
   margin: 1%;
 }
 
-img {
+.container {
+  padding: 5.3125rem;
+}
+
+.spring_autumn, .summer_winter {
+  display: flex;
+  align-items: center;
+}
+
+.spring_autumn img {
   width: 12rem;
   height: 11rem;
   border-radius: 20%;
+  margin-right: 2.5rem; 
+  margin-left: 30px;
 }
 
-.p01 {
-  position: relative;
-  left: 100px;
+.spring_autumn p {
+  font-size: 16px; 
+  color: #000000; 
+  margin-right: 50px;
+  line-height: 30px;
 }
 
+.summer_winter img {
+  width: 12rem;
+  height: 11rem;
+  border-radius: 20%; 
+  margin-left: 30px;
+}
 
+.summer_winter p {
+  font-size: 16px; 
+  color: #000000; 
+  margin-left: 50px;
+  text-align: right;
+  line-height: 30px;
+}
+
+.footer {
+  background-color:  #b3d7e5;
+  color: #fff;
+  padding: 1.25rem;
+  text-align: center;
+  margin-bottom: auto;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-text {
+  font-size: 14px;
+  margin: 0;
+}
