--- a/season/css/booking.css
+++ b/season/css/booking.css
@@ -1,5 +1,15 @@
+/* 공통 */
 a {
   text-decoration: none;
+}
+.d_f {
+  display: flex;
+}
+.d_f_start {
+  display: flex-start;
+}
+.d_f_end {
+  display: flex-end;
 }
 h1:after {
   content: "";
@@ -8,6 +18,8 @@ h1:after {
   border-bottom: 3px solid aquamarine;
   margin: 20px 0px;
 }
+
+/* 상단 이미지 영역 */
 .b_top_img {
   margin: 10px auto;
   height: 500px;
@@ -45,19 +57,28 @@ h1:after {
   transform: scale(1.3);
   transition-duration: 1s;
 }
+
+/* 본문 영역 */
 .b {
   margin: auto;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
+.b_star{
+  margin: 20px;
+  color: red;
+}
 .b_content{
   grid-column: 2/4;
 }
 
+
+/* sidebar 영역 */
 .b_s {
   position: sticky;
-  border: 1px solid black;
+  border: 1px solid rgb(230, 230, 230);
+  box-shadow: 1px 1px 10px 1px rgba(200, 200, 200, 0.5);
   top: 100px;
   width: 350px;
   height: 700px;
@@ -65,7 +86,7 @@ h1:after {
 }
 
 .b_block {
-  margin: 20px;
+  margin: 0 20px 40px 20px;
 }
 
 .b_table {
@@ -83,36 +104,46 @@ h1:after {
 }
 
 .b_s_block {
-  margin: 10px;
+  margin: 15px 25px;
 }
 
-.d_f {
-  display: flex;
+.space_btween {
+  justify-content: space-between;
 }
 
 .b_s_long {
-  margin: 10px auto;
-  width: 18rem;
-  height: 1.8rem;
+  width: 100%;
+  height: 2rem;
   padding-left: 5px;
-  
+}
+.b_s_short {
+  width: 10.5em;
+  height: 2rem;
+  padding-left: 5px;
 }
 
-.b_s_short {
-  
-  margin: 10px auto;
-  width: 9rem;
-  height: 1.8rem;
-  padding-left: 5px;
+.b_money {
+  text-align: right;
+}
 
+.b_alert {
+  font-size: 0.7rem;
+  text-align: justify;
+}
+.b_alert_red {
+  margin: auto;
+  padding: 10px;
+  color: rgb(255, 100, 100);
+  font-size: 0.7rem;
+  text-align: justify;
+  background-color: rgb(255, 237, 237);
 }
 
 .a_btn {
   display: flex;
-  width: 200px;
-  height: 35px;
-  border: 1px solid black;
-  margin: 5px auto;
+  width: 100%;
+  height: 40px;
+  margin: 10px auto;
 }
 
 #a_reservation {
@@ -137,8 +168,6 @@ h1:after {
 }
 
 #b_s_date {
-  margin: 10px auto;
-  width: 18rem;
+  width: 295px;
   height: 1.8rem;
-  padding-left: 5px;
 }
