--- a/season/css/booking.css
+++ b/season/css/booking.css
@@ -19,51 +19,94 @@ h1:after {
   margin: 20px 0px;
 }
 
+
 /* 상단 이미지 영역 */
-.b_top_img {
-  margin: 10px auto;
-  height: 500px;
-  max-width: 1920px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 250px);
-}
+
 .b_top_img div {
   overflow: hidden;
 }
 
-#bt_img1 {
-  grid-column: 1 / 3;
-	grid-row: 1 / 3;
+@media (min-width: 426px) and (max-width: 1981px) {
+  
+  .b_top_img {
+    margin: 10px auto;
+    height: 500px;
+    max-width: 1920px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 250px);
+  }
+
+  #bt_img1 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+  }
+  #bt_img2 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+  }
+  #bt_img3 {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+  }
+  #bt_img4 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+  }
+  #bt_img5 {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+  }
+  
+  .b_top_img div img:hover {
+    transform: scale(1.3);
+    transition-duration: 1s;
+  }
 }
-#bt_img2 {
-  grid-column: 3 / 4;
-	grid-row: 1 / 2;
-}
-#bt_img3 {
-  grid-column: 4 / 5;
-	grid-row: 1 / 2;
-}
-#bt_img4 {
-  grid-column: 3 / 4;
-	grid-row: 2 / 3;
-}
-#bt_img5 {
-  grid-column: 4 / 5;
-	grid-row: 2 / 3;
+@media all and (max-width: 426px) {
+  .b_top_img {
+    margin: 10px auto;
+    height: 400px;
+    max-width: 400px;
+    
+  }
+  #bt_img1 {
+    margin: auto;
+    width: 400px;
+    height: 400px;
+  }
+  #bt_img2 {
+    display: none;
+  }
+  #bt_img3 {
+    display: none;
+  }
+  #bt_img4 {
+    display: none;
+  }
+  #bt_img5 {
+    display: none;
+  }
 }
 
-.b_top_img div img:hover {
-  transform: scale(1.3);
-  transition-duration: 1s;
-}
 
 /* 본문 영역 */
-.b {
-  margin: auto;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+
+
+@media (min-width: 426px) and (max-width: 1981px) {
+  .b {
+    margin: auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media all and (max-width: 426px) {
+  .b {
+    margin: auto;
+    width: 100%;
+  }
 }
 .b_star{
   margin: 20px;
@@ -75,16 +118,29 @@ h1:after {
 
 
 /* sidebar 영역 */
-.b_s {
-  position: sticky;
-  border: 1px solid rgb(230, 230, 230);
-  box-shadow: 1px 1px 10px 1px rgba(200, 200, 200, 0.5);
-  top: 100px;
-  width: 350px;
-  height: 700px;
-  grid-column: 4/5;
-}
 
+
+@media (min-width: 426px) and (max-width: 1981px) {
+  .b_s {
+    position: sticky;
+    border: 1px solid rgb(230, 230, 230);
+    box-shadow: 1px 1px 10px 1px rgba(200, 200, 200, 0.5);
+    top: 100px;
+    width: 350px;
+    height: 700px;
+    grid-column: 4/5;
+  }
+}
+@media all and (max-width: 426px) {
+  .b_s {
+    margin: auto;
+    border: 1px solid rgb(230, 230, 230);
+    box-shadow: 1px 1px 10px 1px rgba(200, 200, 200, 0.5);
+    top: 100px;
+    width: 350px;
+    height: 700px;
+  }
+}
 .b_block {
   margin: 0 20px 40px 20px;
 }
@@ -95,6 +151,7 @@ h1:after {
 }
 
 .b_table td {
+  font-size: 0.9rem;
   min-width: 100px;
   padding: 20px;
 }
@@ -117,7 +174,7 @@ h1:after {
   padding-left: 5px;
 }
 .b_s_short {
-  width: 10.5em;
+  width: 10.8em;
   height: 2rem;
   padding-left: 5px;
 }
@@ -171,3 +228,4 @@ h1:after {
   width: 295px;
   height: 1.8rem;
 }
+
