--- a/index.css
+++ b/index.css
@@ -19,7 +19,6 @@ nav {
   color: rgb(77, 125, 159);
 }
 
-
 .brandlogo {
   display: inline-block;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -32,16 +31,59 @@ nav {
 }
 
 .slideshow-container {
+  display: flex;
   position: relative;
-  margin: auto;
-  width: 600px;
-  height: 400px;
+  margin-top: 2.1875rem;
+  width: 100%;
+  height: 21.875rem; /* 슬라이드쇼의 높이 조정 */
+  overflow: hidden;
 }
 
 .slide {
-  display: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
+.slide:first-child {
+  opacity: 1;
+}
+
+@keyframes slideshow {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  33.33% {
+    opacity: 1;
+  }
+  53.33% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.slide:nth-child(1) {
+  animation: slideshow 10s infinite;
+}
+
+.slide:nth-child(2) {
+  animation: slideshow 10s infinite 3.33s;
+}
+
+.slide:nth-child(3) {
+  animation: slideshow 10s infinite 6.67s;
 }
 
 .container {
