--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ nav {
 }
 
 .slideshow-container {
-  display: flex;
+  display: flex; /*컨테이너 내부의 요소들을 가로로 정렬하기 위해 flexbox를 사용*/
   position: relative;
   margin-top: 2.1875rem;
   width: 100%;
@@ -52,10 +52,12 @@ nav {
   transition: opacity 1s ease;
 }
 
+/* 첫 번째 슬라이드는 초기에 보이도록 설정합니다. (opacity: 1;) */
 .slide:first-child {
   opacity: 1;
 }
 
+/* 슬라이드의 애니메이션을 정의하는 키프레임 */
 @keyframes slideshow {
   0% {
     opacity: 0;
@@ -74,6 +76,7 @@ nav {
   }
 }
 
+/* 각 슬라이드 요소에 애니메이션을 적용 */
 .slide:nth-child(1) {
   animation: slideshow 10s infinite;
 }
