--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ nav {
 
 .slideshow-container {
   display: flex; /*컨테이너 내부의 요소들을 가로로 정렬하기 위해 flexbox를 사용*/
-  position: relative;
+  position: relative; /*해당 요소를 자신의 정상적인 위치를 기준으로 배치*/
   margin-top: 2.1875rem;
   width: 100%;
   height: 21.875rem; /* 슬라이드쇼의 높이 조정 */
@@ -47,7 +47,7 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
+  height: auto; /* auto 아니면 사진이 찌꾸려짐 */
   opacity: 0;
   transition: opacity 1s ease;
 }
@@ -116,7 +116,7 @@ nav {
 .summer_winter img {
   width: 12rem;
   height: 11rem;
-  border-radius: 10px 100px / 120px;
+  border-radius: 0px 100px / 120px;
   margin-left: 30px;
 }
 
