--- a/index.css
+++ b/index.css
@@ -13,6 +13,14 @@ nav {
   width: 100%;
   background-color: #ffffff;
 }
+.logobox{
+  width: 105px;
+}
+.navbar ol {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px;
+}
 
 .logo {
   display: inline-block;
@@ -27,7 +35,7 @@ nav {
 
 .search, .member {
   display: inline-block;
-  padding-left: 30%;
+  /* padding-left: 30%; */
 }
 
 .slideshow-container {
