--- a/index.css
+++ b/index.css
@@ -15,8 +15,9 @@ nav {
 }
 .logobox{
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  width: 115px;
+  width: 109px;
 }
 .navbar ol {
   display: flex;
@@ -47,6 +48,7 @@ nav {
   width: 100%;
   height: 21.875rem; /* 슬라이드쇼의 높이 조정 */
   overflow: hidden;
+  margin-top: 40px;
 }
 
 .slide {
